# django-email-certify

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
email_verification/: admin.py  apps.py  models.py  urls.py  views.py
email_verification/migrations/: 0001_initial.py  0002_remove_token_valid.py
email_verification/templates/email_verification/: mail.html  pre-login-failure.html  pre-login-success.html
