[metadata]
name = django-email-certify
version = 1.0.0
description = A Django package to manage user email verification on registration
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/codewitgabi/email-verification-pkg
author = Gabriel Michael Ojomakpene (codewitgabi)
author_email = codewitgabi222@gmail.com
license = MIT-License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
